--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a class="navbar-brand" href="#">
                       <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
                     </a>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <div class="">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
