--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Navbar</a>
                     <a class="navbar-brand" href="#">
-                      <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
+                      <img src="logo-magnified.png" alt="Bootstrap" width="30" height="24">
                     </a>
                   <div class="">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
