--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </head>
     <body class="bg-dark">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-gray">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
-                  <a class="navbar-brand" href="#">
-                    <img src="logo-magnified.png" alt="Bootstrap" width="30" height="24">
-                  </a>
-                      <a class="nav-item nav-link active">Home</a>
-                      <a class="nav-item nav-link active" aria-current="page" href="#">About</a>
-                      <a class="nav-item nav-link" href="#">Sell</a>
-                      <a class="nav-item nav-link" href="#">Contact</a>
-                  <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-                </div>
-              </nav>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                <a class="navbar-brand" href="#">
+                  <img src="logo-magnified.png" alt="Bootstrap" width="30" height="24">
+                </a>
+                <a class="nav-item nav-link active">Home</a>
+                <a class="nav-item nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-item nav-link" href="#">Sell</a>
+                <a class="nav-item nav-link" href="#">Contact</a>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </nav>
     </body>
 </html>
