--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
-                <a class="navbar-brand logo" href="#">
-                  <img src="logo-magnified.png" alt="Bootstrap" width="30" height="24">
+                <a class="navbar-brand" href="#">
+                  <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
                 </a>
                 <a class="nav-item nav-link active">Home</a>
                 <a class="nav-item nav-link active" aria-current="page" href="#">About</a>
