--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <body class="">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand left" href="#">Navbar</a>
+                <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
                 </a>
-                <a class="nav-item nav-link active">Home</a>
-                <a class="nav-item nav-link active" aria-current="page" href="#">About</a>
-                <a class="nav-item nav-link" href="#">Sell</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link left">Home</a>
+                <a class="nav-item nav-link active left" aria-current="page" href="#">About</a>
+                <a class="nav-item nav-link left" href="#">Sell</a>
+                <a class="nav-item nav-link left" href="#">Contact</a>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
