--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
         <style>
             .logo {
-                width:38px;
-                height:38px;
+                width: 38px;
+                height: 38px;
+            }
+            .left {
+                float: left;
             }
         </style>
         
