--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             .left {
                 float: left;
             }
+            .navcontainer {
+                background-color: rgba(241, 236, 236, 0.963);
+            }
         </style>
         
     </head>
     <body class="">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
-              <div class="container-fluid">
+              <div class="container-fluid navcontainer">
                 <a class="navbar-brand left" href="#">Navbar</a>
                 <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
