--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         
     </head>
     <body class="">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-              <div class="container-fluid navcontainer">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
+              <div class="container-fluid">
                 <a class="navbar-brand left" href="#">Navbar</a>
                 <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
