--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
         <style>
+            body a {
+                color: black;
+            }
             .logo {
                 width: 38px;
                 height: 38px;
@@ -24,7 +27,7 @@
     <body class="">
             <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
               <div class="container-fluid">
-                <a class="navbar-brand left" href="#">Navbar</a>
+                <a class="navbar-brand left" href="#">RoboShop</a>
                 <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
                 </a>
