--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
                 float: left;
             }
             .navcontainer {
+                display: flex;
+                align-items: flex-start;
                 background-color: rgba(241, 236, 236, 0.963);
             }
+            .horizontal {
+                
         </style>
         
     </head>
     <body class="">
             <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
-              <div class="container-fluid">
+              <div class="container-fluid horizontal">
                 <a class="navbar-brand left" href="#">RoboShop</a>
                 <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
