--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body class="">
             <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
               <div class="container-fluid horizontal">
-                <a class="navbar-brand left" href="#">RoboShop</a>
+                <a class="navbar-brand left" href="#"><h1>RoboShop</h1></a>
                 <a class="navbar-brand left" href="#">
                   <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
                 </a>
