--- a/index.html
+++ b/index.html
@@ -15,35 +15,37 @@
                 width: 38px;
                 height: 38px;
             }
-            .left {
-                float: left;
-            }
             .navcontainer {
                 display: flex;
                 align-items: flex-start;
                 background-color: rgba(241, 236, 236, 0.963);
             }
-            .horizontal {
+            .nav-left {
+                display: flex;
+                align-items: center;
+            }
                 
         </style>
         
     </head>
     <body class="">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
-              <div class="container-fluid horizontal">
-                <a class="navbar-brand left" href="#"><h1>RoboShop</h1></a>
-                <a class="navbar-brand left" href="#">
-                  <img src="logo-magnified.png" class="logo" alt="Bootstrap" width="30" height="24">
-                </a>
-                <a class="nav-item nav-link left">Home</a>
-                <a class="nav-item nav-link active left" aria-current="page" href="#">About</a>
-                <a class="nav-item nav-link left" href="#">Sell</a>
-                <a class="nav-item nav-link left" href="#">Contact</a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary navcontainer">
+            <div class="container-fluid horizontal">
+                <div class="nav-left">
+                    <a class="navbar-brand" href="#"><h1>RoboShop</h1></a>
+                    <a class="navbar-brand" href="#">
+                      <img src="logo-magnified.png" class="logo" alt="Bootstrap">
+                    </a>
+                    <a class="nav-item nav-link">Home</a>
+                    <a class="nav-item nav-link active left" aria-current="page" href="#">About</a>
+                    <a class="nav-item nav-link" href="#">Sell</a>
+                    <a class="nav-item nav-link" href="#">Contact</a>
+                </div>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-              </div>
-            </nav>
+            </div>
+        </nav>
     </body>
 </html>
